@@ -6,4 +6,4 @@ EXTRA_DIST = jnettop.spec
 
 bin_PROGRAMS = jnettop
 
-jnettop_SOURCES = jnettop.c jresolv.c jnettop.h include/ether.h include/ethertype.h include/ip.h include/tcp.h include/udp.h include/sll.h
+jnettop_SOURCES = jnettop.c jresolv.c jfilter.c jnettop.h include/ether.h include/ethertype.h include/ip.h include/tcp.h include/udp.h include/sll.h
